[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["cargo"] }
reqwest = {version = "0.11.25", features = ["blocking"]}
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
thiserror = "1.0.57"
